# spectrum-core

./: .gitignore  Cargo.toml  NOTE.md  README.md
.cargo/: config
.github/workflows/: tests_and_checks.yml
artifacts/: astroport_generator_proxy_to_spec.wasm  checksums.txt  checksums_intermediate.txt  spectrum_astroport_farm.wasm  spectrum_compound_farm.wasm  spectrum_compound_proxy.wasm  spectrum_fees_collector.wasm  spectrum_generator_proxy.wasm  spectrum_lp_staking.wasm  spectrum_pair_proxy.wasm  spectrum_router.wasm
contracts/astroport_farm/: Cargo.toml
contracts/astroport_farm/examples/: schema.rs
contracts/astroport_farm/schema/: cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  query_msg.json  reward_info_response.json  state_info.json
contracts/astroport_farm/src/: bond.rs  compound.rs  contract.rs  cw20.rs  error.rs  lib.rs  mock_querier.rs  ownership.rs  state.rs  test.rs
contracts/compound_farm/: Cargo.toml
contracts/compound_farm/examples/: schema.rs
contracts/compound_farm/schema/: callback_msg.json  execute_msg.json  instantiate_msg.json  query_msg.json  reward_info_response.json
contracts/compound_farm/src/: bond.rs  compound.rs  contract.rs  cw20.rs  error.rs  lib.rs  mock_querier.rs  ownership.rs  state.rs  test.rs
contracts/compound_proxy/: Cargo.toml
contracts/compound_proxy/.cargo/: config
contracts/compound_proxy/examples/: schema.rs
contracts/compound_proxy/schema/: callback_msg.json  compound_simulation_response.json  config_response.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/compound_proxy/src/: contract.rs  error.rs  lib.rs  mock_querier.rs  querier.rs  simulation.rs  state.rs  test.rs
contracts/farms/spectrum_astroport_farm/: Cargo.toml
contracts/farms/spectrum_astroport_farm/examples/: schema.rs
contracts/farms/spectrum_astroport_farm/schema/: config_info.json  cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  pool_response.json  query_msg.json  reward_info_response.json  state_info.json
contracts/farms/spectrum_astroport_farm/src/: bond.rs  compound.rs  contract.rs  error.rs  lib.rs  querier.rs  state.rs
contracts/fees_collector/: Cargo.toml
contracts/fees_collector/examples/: schema.rs
contracts/fees_collector/schema/: asset_with_limit.json  balances_response.json  collect_simulation_response.json  config.json  config_response.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/fees_collector/src/: contract.rs  error.rs  lib.rs  mock_querier.rs  state.rs  test.rs  utils.rs
contracts/generator_proxy/: Cargo.toml
contracts/generator_proxy/examples/: schema.rs
contracts/generator_proxy/schema/: callback_msg.json  config.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/generator_proxy/src/: astro_generator.rs  astro_gov.rs  bond.rs  config.rs  contract.rs  error.rs  lib.rs  mock_querier.rs  model.rs  oper.rs  query.rs  staking.rs  state.rs  test.rs
contracts/generator_proxy_to_spec/: Cargo.toml
contracts/generator_proxy_to_spec/.cargo/: config
contracts/generator_proxy_to_spec/schema/: cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  migrate_msg.json  query_msg.json
contracts/generator_proxy_to_spec/src/: contract.rs
contracts/generator_proxy_to_spec/src/testing/: mock_querier.rs  tests.rs
contracts/lp_staking/: Cargo.toml
contracts/lp_staking/examples/: schema.rs
contracts/lp_staking/schema/: config_response.json  execute_msg.json  instantiate_msg.json  query_msg.json  reward_info_response.json
contracts/lp_staking/src/: contract.rs  error.rs  lib.rs  mock_querier.rs  ownership.rs  state.rs  testing.rs
contracts/pair_proxy/: Cargo.toml
contracts/pair_proxy/schema/: cumulative_prices_response.json  cw20_hook_msg.json  description.json  instantiate_msg.json  pair_info.json  pool_response.json  query_msg.json
contracts/pair_proxy/src/: contract.rs  error.rs  lib.rs  mock_querier.rs  operations.rs  state.rs  test.rs  testing.rs
contracts/router/: Cargo.toml
contracts/router/examples/: pair_schema.rs
contracts/router/schema/: callback_msg.json  execute_msg.json  instantiate_msg.json  pair_info.json  query_msg.json  route.json  swap_operation.json  swap_operation_request.json
contracts/router/src/: contract.rs  error.rs  mock_querier.rs  state.rs  test.rs
contracts/spectrum_astroport_farm/schema/: query_msg.json
contracts/spectrum_astroport_farm/src/: compound.rs  contract.rs  error.rs  lib.rs  state.rs
