[workspace]
members = [
    "packages/*",
    "contracts/fees_collector",
    "contracts/pair_proxy",
    "contracts/compound_proxy",
    "contracts/farms/*",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
