[package]
name = "spectrum-fees-collector"
version = "1.0.0"
authors = ["Spectrum"]
edition = "2021"
description = "Contract to collect fees from farms"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.1" }
cw20 = {version = "0.15"}
cw-storage-plus = { version = "0.15", features = ["iterator"] }
schemars = "0.8.1"
astroport = { path = "../../packages/astroport", default-features = false }
spectrum = { version = "1.0.0", path = "../../packages/spectrum" }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cosmwasm-schema = "1.1"

[dev-dependencies]
cw-multi-test = {version = "0.15"}
