[package]
name = "spectrum-router"
version = "1.0.0"
authors = ["Spectrum"]
edition = "2021"
description = "Proxy contract to Astroport pair"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
spectrum = { version = "1.0.0", path = "../../packages/spectrum" }
cosmwasm-std = { version = "1.1.3" }
cw-storage-plus = {version = "0.13.4"}
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
kujira = "0.7.21"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.4"
proptest = "0.10.1"
